--- a/var/www/html/vps/index.html
+++ b/var/www/html/vps/index.html
@@ -1,12 +1,24 @@
 <html>
- <head> 
+ <head>
+  <meta charset="UTF-8">
   <title>VPS TESTE</title>
  <body>
-  <table borde=1>
+  <center>
+  <table border=0>
    <tr>
     <td><img src=vps01.png></td>
     <td><img src=vps02.png></td>
     <td><img src=vps03.png></td>
-   </tr> 
+   </tr>
+   <tr>
+    <td><center><pre><b>CPU 1 Núcleo<br>256MB RAM<br>20GB</td>
+    <td><center><pre><b>CPU 1 Núcleo<br>512MG RAM<br>20GB</td>
+    <td><center><pre><b>CPU 1 Núcleo<br>1GB RAM<br>20GB</td>
+   </tr>
+   <tr>
+    <td><center><img src=on70.png></td>
+    <td><center><img src=on70.png></td>
+    <td><center><img src=on70.png></td>
+   </tr>
  </body>
 <html>
