--- a/var/www/html/lip/index.html
+++ b/var/www/html/lip/index.html
@@ -1,7 +1,7 @@
 <html>
  <head> 
   <meta charset="UTF-8">
-  <title>VPS ZERO</title>
+  <title>LIP FORK LUW</title>
   <style type="text/css">
 .myButton {
 	-moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
@@ -49,7 +49,7 @@
   <table border=0>
 <!--
    <tr>
-    <td><center><h1>VPS <font color=blue>Zero</font></td>
+    <td><center><h1>LPI FORK <font color=blue>LUW</font></td>
    </tr> 
    <tr>
     <td><center><img src=vps03.png><br></td>
@@ -59,7 +59,7 @@
    </tr> 
 -->
    <tr>
-    <td><center><a href="../cgi-bin/vps-ini.sh" class="myButton">Free Test</a></td>
+    <td><center><a href="../cgi-bin/lip-ini.sh" class="myButton">LIP Test</a></td>
    </tr> 
    <tr>
     <td><center><br><img src=linux.png><br></td>
